@@ -1,31 +1,49 @@
+/*
+ * Copyright (c) 2025. David Noha
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *  http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ */
+
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     `java-library`
-    id("io.freefair.lombok") version "8.14.2"
     idea
-
+    id("io.freefair.lombok") version "8.14.2"
 }
 
 group = "net.netbeing"
 version = "0.1"
 
 repositories {
-    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
 dependencies {
-    implementation(libs.guava)
+    api(project(":cheap-core"))
+
+    implementation(libs.mariaDB)
     implementation(libs.slf4j)
     implementation(libs.logback.core)
     implementation(libs.logback.classic)
 
     compileOnly(libs.jetbrains.annotations)
 
+    testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation(libs.junit.jupiter)
-    testImplementation(libs.tempus.fugit)
     testRuntimeOnly(libs.junit.platform.launcher)
-    testRuntimeOnly(libs.junit.jupiter)
+    testImplementation(libs.mariaDB4j)
+    testImplementation(project(":cheap-json"))
+    testImplementation(libs.guava)
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -41,8 +59,10 @@ idea {
     }
 }
 tasks.named<Test>("test") {
-    // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+    jvmArgs(
+        "--enable-native-access=ALL-UNNAMED"
+    )
 }
 gradle.projectsEvaluated {
     tasks.withType<JavaCompile> {
